# roku9

./: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  libgcc_s.1.dylib  libstdc++.6.dylib
src/: Aligner.cpp  Aligner.h  CMakeLists.txt  PointCloud.cpp  PointCloud.h
src/cpd-master/: CMakeLists.txt
src/cpd-master/include/cpd/: matrix.hpp
src/cpd-master/src/: CMakeLists.txt  rigid.cpp
src/cpd-master/tests/fixtures/: fish.csv  fish_distorted.csv
tests/: Aligner.cpp  CMakeLists.txt  PointCloud.cpp  aligner.inp.in  main.h  support.hpp.in
tests/fixtures/: align1.inp
